--- a/lib/switch_web/templates/page/index.html.eex
+++ b/lib/switch_web/templates/page/index.html.eex
@@ -1,5 +1,13 @@
-<center>
-  <h1>
-    Hallo from Switch
-  </h1>
-</center>
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      &nbsp;
+    </div>
+    <div class="col-4">
+      <h1>Switch</h1>
+    </div>
+    <div class="col-4">
+      &nbsp;
+    </div>
+  </div>
+</div>
