--- a/lib/switch_web/templates/page/index.html.eex
+++ b/lib/switch_web/templates/page/index.html.eex
@@ -1,13 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-      &nbsp;
-    </div>
-    <div class="col-4">
-      <h1>Switch</h1>
-    </div>
-    <div class="col-4">
-      &nbsp;
-    </div>
-  </div>
-</div>
+<div id="switch-app" />
