--- a/lib/switch_web/client/js/layouts/FooterLayout/styles.scss
+++ b/lib/switch_web/client/js/layouts/FooterLayout/styles.scss
@@ -1,3 +1,11 @@
 :local {
-
+  .footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 0;
+    background: #555;
+    color: #ccc
+  }
 }
