--- a/lib/switch_web/client/scss/layout/_body.scss
+++ b/lib/switch_web/client/scss/layout/_body.scss
@@ -11,4 +11,7 @@
       }
     }
   }
+  body {
+    // background: url("https://media.giphy.com/media/VPh17XcezpIpq/giphy.gif") 0 0 repeat;
+  }
 }
